Fixing whitespace in dashboard

--- a/src/App.css
+++ b/src/App.css
@@ -165,7 +165,7 @@
 
   .cards-container {
     display: grid;
-    height: 100vh;
+    height: 80vh;
     gap: 1rem;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
